--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_native_splash: ^2.4.0
   flutter_svg: ^2.0.9
   gap: ^3.0.1
   google_fonts: ^6.1.0
@@ -25,6 +26,16 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+
+flutter_native_splash:
+  color: "#262626"
+  image: assets/logo.png
+  android: true
+  ios: true
+  android_12:
+    image: assets/android12.png
+    color: "#262626"
+  
 
 flutter:
   uses-material-design: true
